// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Nav /> > renders desktop view (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="_navigationContainer_9d65e5"
    role="navigation"
  >
    <div
      class="_navigationSlider_9d65e5"
    >
      <div
        class="_tabWrapper_a7072b null "
      >
        <div
          class="_buttonContainer_a7072b"
        >
          <button
            aria-label="Foo"
            class="_tab_a7072b"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-house fa-lg"
              data-icon="house"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M277.8 8.6c-12.3-11.4-31.3-11.4-43.5 0l-224 208c-9.6 9-12.8 22.9-8 35.1S18.8 272 32 272l16 0 0 176c0 35.3 28.7 64 64 64l288 0c35.3 0 64-28.7 64-64l0-176 16 0c13.2 0 25-8.1 29.8-20.3s1.6-26.2-8-35.1l-224-208zM240 320l32 0c26.5 0 48 21.5 48 48l0 96-128 0 0-96c0-26.5 21.5-48 48-48z"
                fill="currentColor"
              />
            </svg>
          </button>
          <span
            class="_helperLabel_a7072b"
          >
            Foo
          </span>
        </div>
      </div>
      <div
        class="_tabWrapper_a7072b null _selected_a7072b"
      >
        <div
          class="_buttonContainer_a7072b"
        >
          <button
            aria-label="Bar"
            class="_tab_a7072b"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-rectangle-ad fa-lg"
              data-icon="rectangle-ad"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M64 64C28.7 64 0 92.7 0 128L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-256c0-35.3-28.7-64-64-64L64 64zM416 184l0 144c0 13.3-10.7 24-24 24-7.1 0-13.5-3.1-17.9-8-10.2 5.1-21.8 8-34.1 8-42 0-76-34-76-76s34-76 76-76c9.9 0 19.3 1.9 28 5.3l0-21.3c0-13.3 10.7-24 24-24s24 10.7 24 24zm-48 92a28 28 0 1 0 -56 0 28 28 0 1 0 56 0zM160 208c-8.8 0-16 7.2-16 16l0 32 48 0 0-32c0-8.8-7.2-16-16-16l-16 0zm32 96l-48 0 0 24c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-104c0-35.3 28.7-64 64-64l16 0c35.3 0 64 28.7 64 64l0 104c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-24z"
                fill="currentColor"
              />
            </svg>
          </button>
          <span
            class="_helperLabel_a7072b"
          >
            Bar
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="_mobileNavigationContainer_9d65e5 false"
    role="navigation"
  />
</DocumentFragment>
`;

exports[`<Nav /> > renders mobile view and calls onTabClick 1`] = `
<DocumentFragment>
  <div
    class="_navigationContainer_9d65e5"
    role="navigation"
  >
    <div
      class="_navigationSlider_9d65e5"
    >
      <div
        class="_tabWrapper_a7072b null "
      >
        <div
          class="_buttonContainer_a7072b"
        >
          <button
            aria-label="Foo"
            class="_tab_a7072b"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-house fa-lg"
              data-icon="house"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M277.8 8.6c-12.3-11.4-31.3-11.4-43.5 0l-224 208c-9.6 9-12.8 22.9-8 35.1S18.8 272 32 272l16 0 0 176c0 35.3 28.7 64 64 64l288 0c35.3 0 64-28.7 64-64l0-176 16 0c13.2 0 25-8.1 29.8-20.3s1.6-26.2-8-35.1l-224-208zM240 320l32 0c26.5 0 48 21.5 48 48l0 96-128 0 0-96c0-26.5 21.5-48 48-48z"
                fill="currentColor"
              />
            </svg>
          </button>
          <span
            class="_helperLabel_a7072b"
          >
            Foo
          </span>
        </div>
      </div>
      <div
        class="_tabWrapper_a7072b null "
      >
        <div
          class="_buttonContainer_a7072b"
        >
          <button
            aria-label="Bar"
            class="_tab_a7072b"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-rectangle-ad fa-lg"
              data-icon="rectangle-ad"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M64 64C28.7 64 0 92.7 0 128L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-256c0-35.3-28.7-64-64-64L64 64zM416 184l0 144c0 13.3-10.7 24-24 24-7.1 0-13.5-3.1-17.9-8-10.2 5.1-21.8 8-34.1 8-42 0-76-34-76-76s34-76 76-76c9.9 0 19.3 1.9 28 5.3l0-21.3c0-13.3 10.7-24 24-24s24 10.7 24 24zm-48 92a28 28 0 1 0 -56 0 28 28 0 1 0 56 0zM160 208c-8.8 0-16 7.2-16 16l0 32 48 0 0-32c0-8.8-7.2-16-16-16l-16 0zm32 96l-48 0 0 24c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-104c0-35.3 28.7-64 64-64l16 0c35.3 0 64 28.7 64 64l0 104c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-24z"
                fill="currentColor"
              />
            </svg>
          </button>
          <span
            class="_helperLabel_a7072b"
          >
            Bar
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="false"
    class="_mobileNavigationContainer_9d65e5 _open_9d65e5"
    role="navigation"
  >
    <div
      class="_tabWrapper_a7072b null "
    >
      <div
        class="_buttonContainer_a7072b"
      >
        <button
          aria-label="Foo"
          class="_tab_a7072b"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-house fa-lg"
            data-icon="house"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M277.8 8.6c-12.3-11.4-31.3-11.4-43.5 0l-224 208c-9.6 9-12.8 22.9-8 35.1S18.8 272 32 272l16 0 0 176c0 35.3 28.7 64 64 64l288 0c35.3 0 64-28.7 64-64l0-176 16 0c13.2 0 25-8.1 29.8-20.3s1.6-26.2-8-35.1l-224-208zM240 320l32 0c26.5 0 48 21.5 48 48l0 96-128 0 0-96c0-26.5 21.5-48 48-48z"
              fill="currentColor"
            />
          </svg>
        </button>
        <span
          class="_helperLabel_a7072b"
        >
          Foo
        </span>
      </div>
    </div>
    <div
      class="_tabWrapper_a7072b null "
    >
      <div
        class="_buttonContainer_a7072b"
      >
        <button
          aria-label="Bar"
          class="_tab_a7072b"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-rectangle-ad fa-lg"
            data-icon="rectangle-ad"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M64 64C28.7 64 0 92.7 0 128L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-256c0-35.3-28.7-64-64-64L64 64zM416 184l0 144c0 13.3-10.7 24-24 24-7.1 0-13.5-3.1-17.9-8-10.2 5.1-21.8 8-34.1 8-42 0-76-34-76-76s34-76 76-76c9.9 0 19.3 1.9 28 5.3l0-21.3c0-13.3 10.7-24 24-24s24 10.7 24 24zm-48 92a28 28 0 1 0 -56 0 28 28 0 1 0 56 0zM160 208c-8.8 0-16 7.2-16 16l0 32 48 0 0-32c0-8.8-7.2-16-16-16l-16 0zm32 96l-48 0 0 24c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-104c0-35.3 28.7-64 64-64l16 0c35.3 0 64 28.7 64 64l0 104c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-24z"
              fill="currentColor"
            />
          </svg>
        </button>
        <span
          class="_helperLabel_a7072b"
        >
          Bar
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
